--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </div>
 
   <footer>
-    © 2025 Tu Nombre. Todos los derechos reservados.
+    © 2025 Todos los derechos reservados.
   </footer>
 </body>
 </html>
