--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <h1>Adrián Fernández Angeles</h1>
     <p>Estudiante de Ingeniería en Robótica Industrial</p>
     <div class="contact-info">
-      <p>📧 correo@email.com | 📞 55-1234-5678 | 🌐 México</p>
+      <p>📧 adrianfa330@gmail.com | 📞 55-3588-7019 | 🌐 México</p>
     </div>
   </header>
 
